--- a/JupyterCrunch.ipynb
+++ b/JupyterCrunch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "JupyterCrunch.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNv73nBB5qIzrZeq2isMpit",
+      "authorship_tag": "ABX9TyN57wuGsOqxjwyCtCUvCFw8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,11 +38,11 @@
         "!cp /usr/bin/boinc /content\n",
         "!cp /usr/bin/boinccmd /content\n",
         "!boinccmd --project_attach \"http://srbase.my-firewall.org/sr5/\" \"2222_e4243665e4ae9aac9c4860429008560c\"\n",
-        "!boinccmd --project_attach \"http://gpugrid.net/\" \"520880_39aa28c40fb633ed3fd8c4a54fc577e2\"\n",
-        "!boinccmd --project_attach \"http://www.cosmologyathome.org/\" \"1575586_bfb1f9f934b39e8cbec67c2b2b5d2aa2\"\n",
-        "!boinccmd --project_attach \"https://universeathome.pl/universe/\" \"212475_b82edae4399bf146cb61c916c42388c1\"\n",
-        "#!boinc --daemon --attach_project \"https://escatter11.fullerton.edu/nfs/\" \"485853_94dfe4c2f46043c5b85288d5bcd5d072\"\n",
-        "#!boinc --daemon --attach_project \"http://yafu.myfirewall.org/yafu/\" \"77118_ed5f55dbe3031cfb6043a2fd7e832406\"\n",
+        "#!boinccmd --project_attach \"http://gpugrid.net/\" \"520880_39aa28c40fb633ed3fd8c4a54fc577e2\"\n",
+        "#!boinccmd --project_attach \"http://www.cosmologyathome.org/\" \"1575586_bfb1f9f934b39e8cbec67c2b2b5d2aa2\"\n",
+        "#!boinccmd --project_attach \"https://universeathome.pl/universe/\" \"212475_b82edae4399bf146cb61c916c42388c1\"\n",
+        "!boinccmd --project_attach \"https://escatter11.fullerton.edu/nfs/\" \"485853_94dfe4c2f46043c5b85288d5bcd5d072\"\n",
+        "#!boinccmd --project_attach \"http://yafu.myfirewall.org/yafu/\" \"77118_ed5f55dbe3031cfb6043a2fd7e832406\"\n",
         "#!boinc --daemon\n",
         "!boinccmd --set_gpu_mode always\n",
         "!boinccmd --get_state"
