--- a/JupyterCrunch.ipynb
+++ b/JupyterCrunch.ipynb
@@ -34,10 +34,10 @@
       "source": [
         "import os.path\n",
         "!boinc --daemon\n",
-        "!boinccmd --project_attach \"https://boinc.bakerlab.org/rosetta/\" \"1904431_59583976062a2c3b3aa74e84e405c043\"\n",
+        "#!boinccmd --project_attach \"https://boinc.bakerlab.org/rosetta/\" \"1904431_59583976062a2c3b3aa74e84e405c043\"\n",
         "#!boinccmd --project_attach \"http://www.worldcommunitygrid.org\" \"1005201_98de6db08052134ea06c998ad70f2d25\"\n",
         "#!boinccmd --project_attach \"http://gpugrid.net/\" \"520880_39aa28c40fb633ed3fd8c4a54fc577e2\"\n",
-        "#!boinccmd --project_attach \"http://www.cosmologyathome.org/\" \"1575586_bfb1f9f934b39e8cbec67c2b2b5d2aa2\"\n",
+        "!boinccmd --project_attach \"http://www.cosmologyathome.org/\" \"1575586_bfb1f9f934b39e8cbec67c2b2b5d2aa2\"\n",
         "#!boinccmd --project_attach \"https://universeathome.pl/universe/\" \"212475_b82edae4399bf146cb61c916c42388c1\"\n",
         "#!boinccmd --project_attach \"https://escatter11.fullerton.edu/nfs/\" \"485853_94dfe4c2f46043c5b85288d5bcd5d072\"\n",
         "#!boinccmd --project_attach \"http://yafu.myfirewall.org/yafu/\" \"77118_ed5f55dbe3031cfb6043a2fd7e832406\"\n",
