--- a/JupyterCrunch.ipynb
+++ b/JupyterCrunch.ipynb
@@ -41,7 +41,7 @@
         "#!boinccmd --project_attach \"https://universeathome.pl/universe/\" \"212475_b82edae4399bf146cb61c916c42388c1\"\n",
         "#!boinccmd --project_attach \"https://escatter11.fullerton.edu/nfs/\" \"485853_94dfe4c2f46043c5b85288d5bcd5d072\"\n",
         "#!boinccmd --project_attach \"http://yafu.myfirewall.org/yafu/\" \"77118_ed5f55dbe3031cfb6043a2fd7e832406\"\n",
-        "!boinccmd --get_state\n",
+        "#!boinccmd --get_state\n",
         "!tail -f stdoutdae.txt"
       ],
       "execution_count": 0,
